--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h2 class="partners-section_title">
                 Our Partners
             </h2>
-            <div class="partners-section_logos">
+            <div class="partners-section_logos partners-section_logos__desktop">
                 <div class="partners-section-logos_line">
                     <img src="./images/partner-1.png" alt="partner" class="partners-section_logo">
                     <img src="./images/partner-2.png" alt="partner" class="partners-section_logo">
@@ -85,6 +85,48 @@
                     <img src="./images/partner-13.png" alt="partner" class="partners-section_logo">
                 </div>
             </div>
+            <div class="partners-section_logos partners-section_logos__mobile">
+                <div class="partners-section_logo-wrap">
+                    <img src="./images/partner-1.png" alt="partner" class="partners-section_logo">
+                </div>
+                <div class="partners-section_logo-wrap">
+                    <img src="./images/partner-2.png" alt="partner" class="partners-section_logo">
+                </div>
+                <div class="partners-section_logo-wrap">
+                    <img src="./images/partner-3.png" alt="partner" class="partners-section_logo">
+                </div>
+                <div class="partners-section_logo-wrap">
+                    <img src="./images/partner-4.png" alt="partner" class="partners-section_logo">
+                </div>
+                <div class="partners-section_logo-wrap">
+                    <img src="./images/partner-5.png" alt="partner" class="partners-section_logo">
+                </div>
+                <div class="partners-section_logo-wrap">
+                    <img src="./images/partner-6.png" alt="partner" class="partners-section_logo">
+                </div>
+                <div class="partners-section_logo-wrap">
+                    <img src="./images/partner-7.png" alt="partner" class="partners-section_logo">
+                </div>
+                <div class="partners-section_logo-wrap">
+                    <img src="./images/partner-8.png" alt="partner" class="partners-section_logo">
+                </div>
+                <div class="partners-section_logo-wrap">
+                    <img src="./images/partner-9.png" alt="partner" class="partners-section_logo">
+                </div>
+                <div class="partners-section_logo-wrap">
+                    <img src="./images/partner-10.png" alt="partner" class="partners-section_logo">
+                </div>
+                <div class="partners-section_logo-wrap">
+                    <img src="./images/partner-11.png" alt="partner" class="partners-section_logo">
+                </div>
+                <div class="partners-section_logo-wrap">
+                    <img src="./images/partner-12.png" alt="partner" class="partners-section_logo">
+                </div>
+                <div class="partners-section_logo-wrap">
+                    <img src="./images/partner-13.png" alt="partner" class="partners-section_logo">
+                </div>
+            </div>
+
             <h2 class="partners-section_title partners-section_title__small">
                 Supported by
             </h2>
