* Шрифт не тот. Если нет возможности поставить нужный, то я подберу другой (хотя это стандартный робото, только узкий). * В шапку лого хорошего качества. Сейчас оно мылит. * Начертания заголовка и текста на первой странице должны быть разные, как в макете * Видео на главной будет проигрываться фоном? Если нет, то нужно вставить другу качественную картинку (я дам). * Почему иконки в разделе solution мылят? Я дам свг, если не удалось или не захотелось экспортировать из макета (странно). * Изменились основные цвета: вместо серых – оттенки синего

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header class="header">
     <div class="container header-container">
         <a href="/">
-            <img src="images/logo.png" alt="Sensilize">
+            <img src="images/logo.svg" alt="Sensilize" class="header_logo">
         </a>
         <nav class="header_navigation header_nav">
             <a href="#home" class="header-nav_link">HOME</a>
@@ -181,7 +181,7 @@
     </p>
     <div class="container solution-section_container">
         <div class="solution-section_item">
-            <img class="solution-section-item_image" src="./images/solution-1.png" alt="solution">
+            <img class="solution-section-item_image" src="./images/solution-1.svg" alt="solution">
             <div>
                 <h3 class="solution-section-item_title">
                     Satellite Imagery
@@ -192,7 +192,7 @@
             </div>
         </div>
         <div class="solution-section_item">
-            <img class="solution-section-item_image" src="./images/solution-2.png" alt="solution">
+            <img class="solution-section-item_image" src="./images/solution-2.svg" alt="solution">
             <div>
                 <h3 class="solution-section-item_title">
                     AI Powered Data
@@ -204,7 +204,7 @@
             </div>
         </div>
         <div class="solution-section_item">
-            <img class="solution-section-item_image" src="./images/solution-3.png" alt="solution">
+            <img class="solution-section-item_image" src="./images/solution-3.svg" alt="solution">
             <div>
                 <h3 class="solution-section-item_title">
                     Weather Monitoring
@@ -215,7 +215,7 @@
             </div>
         </div>
         <div class="solution-section_item">
-            <img class="solution-section-item_image" src="./images/solution-4.png" alt="solution">
+            <img class="solution-section-item_image" src="./images/solution-4.svg" alt="solution">
             <div>
                 <h3 class="solution-section-item_title">
                     IOT Tools
@@ -226,7 +226,7 @@
             </div>
         </div>
         <div class="solution-section_item">
-            <img class="solution-section-item_image" src="./images/solution-5.png" alt="solution">
+            <img class="solution-section-item_image" src="./images/solution-5.svg" alt="solution">
             <div>
                 <h3 class="solution-section-item_title">
                     Drone Flyovers
@@ -237,7 +237,7 @@
             </div>
         </div>
         <div class="solution-section_item">
-            <img class="solution-section-item_image" src="./images/solution-6.png" alt="solution">
+            <img class="solution-section-item_image" src="./images/solution-6.svg" alt="solution">
             <div>
                 <h3 class="solution-section-item_title">
                     Agronomist
